veil-tests/src/compile_tests/fail/redact_enum_without_variant.stderr
error: at least `#[redact(all, variant)]` is required here to redact all variant names
 --> src/compile_tests/fail/redact_enum_without_variant.rs:4:1
  |
4 | #[redact(all)]
  | ^

error: please specify at least `#[redact(all, ...)]` or `#[redact(variant, ...)]` first, or both as separate attributes
  --> src/compile_tests/fail/redact_enum_without_variant.rs:11:5
   |
11 |     #[redact]
   |     ^
